# django-uv-docker-example

./: .gitignore  Dockerfile  multistage.Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
src/: manage.py
src/django_uv_docker_example/: asgi.py  settings.py  urls.py  wsgi.py
