[project]
name = "uv-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.4",
    "granian>=1.7.4",
]

[project.scripts]
hello = "uv_docker_example:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]
